[eunji][#update]기업까지 예외처리 완료

--- a/KosaESS/src/main/resources/static/css/admin/company_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/company_list.css
@@ -308,3 +308,22 @@ nav {
 	display: flex;
 	justify-content: space-around;
 }
+
+.company_detail_table tr th{
+	width:10%;
+}
+
+.red{
+	color: red;
+}
+
+#excel_btn {
+	border: 2px solid green;
+	background: white;
+	color: green;
+}
+
+#excel_btn>img {
+	margin-right: 5px;
+	width: 20px;
+}
