--- a/KosaESS/src/main/resources/templates/admin/applicant_list.html
+++ b/KosaESS/src/main/resources/templates/admin/applicant_list.html
@@ -115,7 +115,7 @@
 				<div class="content_info_wrap">
 					<div class="content_info">
 						<span>총 <span class="applicant_list_cnt"
-							th:text="${#lists.size(applyDetailList)}">aplyListCnt</span> 명
+							th:text="${#lists.size(applyDetailList)}">aplyListCnt</span> 건
 						</span>
 					</div>
 					<div class="content_info_btn_wrap">
