--- a/KosaESS/src/main/resources/templates/admin/insert_manager_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_manager_popup.html
@@ -28,9 +28,10 @@
 				class="input_manager_pwd" placeholder="비밀번호"></td>
 			</tr>
 			<tr class="input_wrap">
-				<th><span class="title">전화번호<span class="red">*</span></span></th>
+				<th><span class="title">연락처<span class="red">*</span></span></th>
 				<td><input type="text" onkeyup="if(window.event.keyCode==13){insertManager()}"
-				class="input_manager_tel" placeholder="전화번호" pattern="[0-9]+"></td>
+				class="input_manager_tel" placeholder="전화번호" oninput="autoHyphen(this)" maxlength="13" 
+				></td>
 			</tr>
 		</table>
 	</div>
@@ -93,6 +94,13 @@
         				});
 		}
 	}
+	
+	//전화번호 입력
+	const autoHyphen = (target) => {
+ target.value = target.value
+   .replace(/[^0-9]/g, '')
+  .replace(/^(\d{0,3})(\d{0,4})(\d{0,4})$/g, "$1-$2-$3").replace(/(\-{1,2})$/g, "");
+}
 	</script>
 </body>
 </html>
