--- a/KosaESS/src/main/resources/templates/admin/notice_list.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_list.html
@@ -86,7 +86,7 @@
 					<!-- 엑셀 다운로드 버튼 -->
 					<button type="button" id="excel_btn"
 						onclick="location.href='/excel/admin/notice'">
-						<img th:src="@{/img/excel.png}"><span>엑셀 다운로드</span>
+						<img th:src="@{/img/excel.png}"><span>엑셀</span>
 					</button>
 
 					<!-- 선택삭제 버튼 -->
