--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -86,7 +86,7 @@
 				<div class="content_info_btn_wrap">
 					<!-- 엑셀 다운로드 버튼 -->
 					<button type="button" id="excel_btn" onclick="location.href='/excel/admin/inquiry'">
-						<img th:src="@{/img/excel.png}"><span>엑셀 다운로드</span>
+						<img th:src="@{/img/excel.png}"><span>엑셀</span>
 					</button>
 				
 					<!-- 선택삭제 버튼 -->
