--- a/KosaESS/src/main/resources/templates/admin/manager_list.html
+++ b/KosaESS/src/main/resources/templates/admin/manager_list.html
@@ -104,7 +104,7 @@
 					<!-- 엑셀 다운로드 버튼 -->
 					<button type="button" id="excel_btn"
 						onclick="location.href='/excel/admin/manager'">
-						<img th:src="@{/img/excel.png}"><span>엑셀 다운로드</span>
+						<img th:src="@{/img/excel.png}"><span>엑셀</span>
 					</button>
 
 					<!-- 등록하기 버튼 -->
@@ -130,7 +130,7 @@
 								name="select_all" onclick="selectAll(this)"></th>
 							<th style="width: 5%;">번호</th>
 							<th style="width: 12%;">업무담당자 이름</th>
-							<th style="width: 20%;">전화번호</th>
+							<th style="width: 20%;">연락처</th>
 							<th style="width: 20%;">이메일</th>
 							<th style="width: 10%;">계정상태</th>
 							<th style="width: 18%;">마지막 로그인 일시</th>
@@ -337,13 +337,6 @@
 							//건수 초기화
 							var cnt = document.querySelector(".manager_list_cnt");
 							cnt.innerHTML = managerList.length;
-							
-							//검색창 초기화
-							searchClassSelect.value="all";
-							searchInputCategorySelect.value = "mngr_nm";
-							searchInputText.value="";
-							searchMngrStatus.value="all";
-							
 							
 							// tbody 요소 찾기
 							var tbody = document.querySelector("tbody");
@@ -658,7 +651,7 @@
 		);
 	}
 	
-	//수정시 전화번호 입력
+	//수정시 연락처 입력
 	const autoHyphen = (target) => {
  target.value = target.value
    .replace(/[^0-9]/g, '')
