--- a/KosaESS/src/main/resources/templates/admin/student_list.html
+++ b/KosaESS/src/main/resources/templates/admin/student_list.html
@@ -109,7 +109,7 @@
 			<div class="content_info_wrap">
 				<div class="content_info">
 					<span>총 <span class="student_list_cnt"
-						th:text="${studentCnt}"></span> 명
+						th:text="${studentCnt}"></span> 건
 					</span>
 				</div>
 				<div class="content_info_btn_wrap">
@@ -138,7 +138,7 @@
 							<th style="width: 22%;">이메일</th>
 							<th style="width: 5%;">성별</th>
 							<th style="width: 10%;">생년월일</th>
-							<th style="width: 10%;">전화번호</th>
+							<th style="width: 10%;">연락처</th>
 							<th style="width: 5%;">직업</th>
 							<th style="width: 10%;">계정상태</th>
 							<th style="width: 20%;">마지막 로그인 일시</th>
