--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -108,7 +108,7 @@
 							<th style="width: 62%;">제목</th>
 							<th style="width: 5%;">첨부파일</th>
 							<th style="width: 5%;">작성자</th>
-							<th style="width: 10%;">등록일시</th>
+							<th style="width: 10%;">등록일자</th>
 							<th style="width: 5%;">조회수</th>
 							<th style="width: 5%;">답변상태</th>
 						</tr>
