--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -57,7 +57,7 @@
 					<span class="links_name">교육생 관리</span>
 			</a> <span class="tooltip">교육생 관리</span></li>
 			
-			<li><a th:href="@{/__${session.role}__/subsidy/list}"> <i 
+			<li><a th:href="@{/__${session.role}__/subsidy/list/1}"> <i 
 					class='bx bx-heart'><img th:src="@{/img/money_icon_white.png}"></i> 
 					<span class="links_name">지원금 관리</span> 
 			</a> <span class="tooltip">지원금 관리</span></li>
